# DYNAMITE

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  LICENSE.md  Overview.md  PLAN.md  README.md  RG-Evo  RG-Evo-shared  build.sh  build_log.txt  cleanStream.cu  docs-fixes-examples.md  docs-fixes-summary.md  docs-icon-fix-final.md  docs-logo-vs-icons-explanation.md  main.cpp  main.cu  math.out  minimalLoop  minimalLoop.cpp  minimalLoop.cu  minimalStream.cu  mkdocs-dev.yml  mkdocs.yml  run.sh  test_interp_weights
.github/workflows/: build.yml  docs.yml  links.yml
.venv-docs/: pyvenv.cfg
Grid_data/128/: grid_params.txt
Grid_data/256/: grid_params.txt
Grid_data/512/: grid_params.txt
Grid_data/514/: grid_params.txt
_demo_resume/18_10_2025_1555_p=3_q=4_lambda=0.50_T0=inf_G=0.00_L=128/: QK_compressed  QR_compressed  correlation.txt  data.h5  energy.txt  params.txt  qk0.txt  rvec.txt  t1_compressed.txt
_quick_io_check/18_10_2025_1641_p=3_q=4_lambda=0.50_T0=inf_G=0.00_L=128/: QK_compressed  QR_compressed  correlation.txt  data.h5  energy.txt  params.txt  qk0.txt  rvec.txt  t1_compressed.txt
_smoke/e2e/18_10_2025_2028_p=3_q=12_lambda=0.30_T0=inf_G=0.00_L=128/: QK_compressed  QR_compressed  correlation.txt  data.h5  energy.txt  params.txt  qk0.txt  rvec.txt  t1_compressed.txt
docs/: gen_api.sh  index.md  install.md  usage.md
docs/assets/: demo.cast  logo-fade.js  overrides.css
docs/concepts/: algorithm.md  architecture.md  eoms-and-observables.md  interpolation-grids.md  sparsification.md  time-integration.md  version-compatibility.md
docs/dev/: contributing.md  contributors.md  release.md  testing.md
docs/howto/: add-new-io-format.md  add-new-kernel.md  add-new-observable.md  generate-grids.md
docs/reference/: api.md  bibliography.md  cite.md  index.md
docs/reference/api/Classes/: index_classes.md  structLoadedStateParams.md  structRKData.md  structSimulationConfig.md  structSimulationData.md  structSimulationDataSnapshot.md  structVersionAnalysis.md  structVersionInfo.md
docs/reference/api/Examples/: index_examples.md
docs/reference/api/Files/: compute__utils_8hpp.md  (+73 more)
docs/tutorials/: cluster-portable-build.md  cpu-only.md  first-run.md  generate-grids.md  parameter-sweep.md  reading-outputs.md
include/: compute_utils.hpp  config.hpp  convolution.hpp  device_utils.cuh  globals.hpp  gpu_memory_utils.hpp  host_device_utils.hpp  index_mat.hpp  index_vec.hpp  interpolation_core.hpp  io_utils.hpp  math_ops.hpp  math_sigma.hpp  math_utilities.hpp  rk_data.hpp  runge_kutta.hpp  search_utils.hpp  simulation_data.hpp  simulation_runner.hpp  sparsify_utils.hpp  stream_pool.hpp  time_steps.hpp  vector_utils.hpp  version_compat.hpp
include/EOMs/: rk_data.hpp  runge_kutta.hpp  time_steps.hpp
include/convolution/: convolution.hpp
include/core/: compute_utils.hpp  config.hpp  config_build.hpp  console.hpp  device_constants.hpp  device_utils.cuh  globals.hpp  gpu_memory_utils.hpp  host_utils.hpp  initialization.hpp  stream_pool.hpp  vector_utils.hpp
include/grid/: grid_cli.hpp  grid_io.hpp  integration.hpp  interpolation_weights.hpp  phi_grid.hpp  pos_grid.hpp  theta_grid.hpp
include/interpolation/: index_mat.hpp  index_vec.hpp  interpolation_core.hpp
include/io/: h5_runtime.hpp  io_utils.hpp
include/math/: lambert_w.hpp  math_ops.hpp  math_sigma.hpp  mp_type.hpp
include/search/: search_utils.hpp
include/simulation/: simulation_control.hpp  simulation_data.hpp  tail_fit.hpp
include/sparsify/: sparsify_utils.hpp
include/ui/: simulation_text_ui.hpp
include/version/: version_compat.hpp  version_info.hpp
scripts/: ImportDMFE.wl  test_spline_accuracy.py
site/: 404.html  index.html  sitemap.xml
site/assets/: mermaid-init.js  preview.html
site/concepts/algorithm/: index.html
site/concepts/architecture/: index.html
site/concepts/eoms-and-observables/: index.html
site/concepts/interpolation-grids/: index.html
site/concepts/sparsification/: index.html
site/concepts/time-integration/: index.html
site/concepts/version-compatibility/: index.html
site/dev/contributing/: index.html
site/dev/release/: index.html
site/dev/testing/: index.html
site/howto/add-new-io-format/: index.html
site/howto/add-new-kernel/: index.html
site/howto/add-new-observable/: index.html
site/install/: index.html
site/reference/: doxybook2.json  index.html
site/search/: search_index.json
site/tutorials/cluster-portable-build/: index.html
site/tutorials/cpu-only/: index.html
site/tutorials/first-run/: index.html
site/tutorials/parameter-sweep/: index.html
site/tutorials/reading-outputs/: index.html
site/usage/: index.html
src/EOMs/: runge_kutta.cpp  runge_kutta.cu  time_steps.cpp  time_steps.cu
src/convolution/: convolution.cpp  convolution.cu
src/core/: compute_utils.cu  config.cpp  config.cu  device_constants.cu  device_utils.cpp  device_utils.cu  gpu_memory_utils.cu  host_device_utils.cu  host_utils.cpp  host_utils.cu  initialization.cpp  initialization.cu  io_utils.cu  program_start_time.cpp  stream_pool.cu
src/grid/: grid_cli.cpp  grid_io.cpp  integration.cpp  interpolation_weights.cpp  phi_grid.cpp  pos_grid.cpp  test_interpolation_weights.cpp  theta_grid.cpp
src/interpolation/: index_mat.cpp  index_mat.cu  index_vec.cpp  index_vec.cu  interpolation_core.cpp  interpolation_core.cu
src/io/: h5_runtime.cpp  io_input.cpp  io_input.cu  io_output.cpp  io_output.cu  io_save_binary.cpp  io_save_compressed.cpp  io_save_driver.cpp  io_save_hdf5.cpp  io_save_params.cpp  io_snapshot_host.cpp  io_utils.cpp  io_utils.cu
src/math/: lambert_w.cpp  math_ops.cpp  math_ops.cu  math_sigma.cpp  math_sigma.cu
src/search/: search_utils.cpp  search_utils.cu
src/simulation/: simulation_control.cpp  simulation_control.cu  simulation_runner.cpp  simulation_runner.cu  tail_fit.cpp  tail_fit.cu
src/sparsify/: sparsify_utils.cpp  sparsify_utils.cu
src/ui/: simulation_text_ui.cpp
src/version/: version_compat.cpp  version_compat.cu  version_info.cpp  version_info.cu
(+91 files in other folders)
